@@ -1,11 +1,13 @@
 package in.hocg.sso.server.sample;
 
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Created by hocgin on 2020/1/9.
@@ -18,7 +20,8 @@ public class UserDetailsServiceImpl implements org.springframework.security.core
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        return new User(username, "{noop}hocgin", Collections.emptyList());
+        List<GrantedAuthority> roles = List.of(new SimpleGrantedAuthority("ROLE_HAS"));
+        return new User(username, "{noop}hocgin", roles);
     }
 
 }
